add ipynb header

--- a/content/the_numbers.ipynb
+++ b/content/the_numbers.ipynb
@@ -4,6 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# PicoCTF Challenge: The Numbers\n",
+    "\n",
     "https://play.picoctf.org/practice/challenge/68?category=2&page=1\n",
     "\n",
     "![numbers](img/the_numbers.png)"
@@ -11,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +91,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
