--- a/content/mod26.ipynb
+++ b/content/mod26.ipynb
@@ -4,6 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# PicoCTF Challenge: Mod26\n",
+    "\n",
     "https://play.picoctf.org/practice/challenge/144?category=2&page=1\n",
     "\n",
     "Cryptography can be easy, do you know what ROT13 is? \n",
@@ -86,7 +88,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
