add scipy requirement

--- a/content/crypto_tools.ipynb
+++ b/content/crypto_tools.ipynb
@@ -18,19 +18,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from string import ascii_lowercase as alphabet\n",
-    "from typing import List, Dict\n",
     "from collections import defaultdict\n",
-    "import logging"
+    "import logging\n",
+    "from random import choice\n",
+    "from scipy.stats import chisquare\n",
+    "from string import ascii_lowercase as alphabet\n",
+    "from typing import List, Dict"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,13 +105,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from scipy.stats import chisquare\n",
-    "\n",
-    "\n",
     "def compare_frequency(given: str, lang_dict: Dict[str, float] = en_freq) -> float:\n",
     "    \"\"\"\n",
     "    Calculate frequency distribution, test against language, return liklihood of belonging\n",
@@ -145,15 +144,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Fermat Primality Test -- (Paar, Pezl. Pg 189)\n",
     "# probabalistic on s\n",
     "# beware Carmichael numbers (false positives)\n",
-    "\n",
-    "from random import choice\n",
     "\n",
     "\n",
     "def is_prime_fermat(candidate: int, s: int) -> bool:\n",
@@ -173,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
