--- a/content/crypto_tools.ipynb
+++ b/content/crypto_tools.ipynb
@@ -63,7 +63,7 @@
     "    if len(start) != len(end):\n",
     "        raise ValueError(\"Both alphabets must be the same length\")\n",
     "    for i, x in enumerate(start):\n",
-    "        given = given.replace(x, end[i])\n",
+    "        given = given.replace(end[i], x)\n",
     "    return given"
    ]
   },
@@ -74,32 +74,32 @@
    "outputs": [],
    "source": [
     "en_freq = {\n",
-    "    \"e\": 0.12,\n",
-    "    \"t\": 0.091,\n",
-    "    \"a\": 0.0812,\n",
+    "    \"e\": 0.1201,\n",
+    "    \"t\": 0.0911,\n",
+    "    \"a\": 0.0813,\n",
     "    \"o\": 0.0768,\n",
     "    \"i\": 0.0731,\n",
     "    \"n\": 0.0695,\n",
-    "    \"s\": 0.06280000000000001,\n",
+    "    \"s\": 0.0628,\n",
     "    \"r\": 0.0602,\n",
     "    \"h\": 0.0592,\n",
     "    \"d\": 0.0432,\n",
     "    \"l\": 0.0398,\n",
     "    \"u\": 0.0288,\n",
     "    \"c\": 0.0271,\n",
-    "    \"m\": 0.026099999999999998,\n",
-    "    \"f\": 0.023,\n",
-    "    \"y\": 0.021099999999999997,\n",
+    "    \"m\": 0.0261,\n",
+    "    \"f\": 0.0230,\n",
+    "    \"y\": 0.0211,\n",
     "    \"w\": 0.0209,\n",
     "    \"g\": 0.0203,\n",
     "    \"p\": 0.0182,\n",
     "    \"b\": 0.0149,\n",
     "    \"v\": 0.0111,\n",
     "    \"k\": 0.0069,\n",
-    "    \"x\": 0.0017000000000000001,\n",
+    "    \"x\": 0.0017,\n",
     "    \"q\": 0.0011,\n",
-    "    \"j\": 0.001,\n",
-    "    \"z\": 0.0007000000000000001,\n",
+    "    \"j\": 0.0010,\n",
+    "    \"z\": 0.0007,\n",
     "}"
    ]
   },
@@ -224,7 +224,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
