--- a/content/objects_through_space.ipynb
+++ b/content/objects_through_space.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![star_wars](img/star_wars.jpeg)"
+    "![star_wars](img/star_wars.JPG)"
    ]
   },
   {
