--- a/content/objects_through_space.ipynb
+++ b/content/objects_through_space.ipynb
@@ -46,7 +46,7 @@
     "        return self.cls.get_depth()\n",
     "```\n",
     "\n",
-    "Furthermore, since the players are going to want to submit _trained_ models, I needed to not only support importing a `Class`, but more specifically an `instance of the Class`. So maybe we want to shoot the laser, then save and submit the model.\n",
+    "Furthermore, since the players are going to want to submit _trained_ models, I needed to not only support importing a `Class`, but more specifically an `instance of the Class`. So let's shoot the laser, then save and submit the model.\n",
     "\n",
     "```python\n",
     "sd = Star_Destroyer()\n",
@@ -64,6 +64,10 @@
     "\n",
     "[Pickle](https://docs.python.org/3/library/pickle.html) is the standard way to do this.\n",
     "\n",
+    "***\n",
+    "It's worth reading the first several paragraphs of the pickle documentation. They discuss marshalling, security and binary vs. text serialization.\n",
+    "***\n",
+    "\n",
     "```python\n",
     "import pickle\n",
     "\n",
@@ -71,7 +75,7 @@
     "    pickle.dump(sd, f)\n",
     "```\n",
     "\n",
-    "After saving the item to a file, the player can send it using normal HTTP methods. Let's take a look at how we'd import and use the object."
+    "After saving the item to a file, the player can send it using normal HTTP methods. After we receive it, we'd expect to be able to `load` and use the pickle."
    ]
   },
   {
@@ -102,7 +106,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Hmm, what do we make of that error? To [Stack Overflow](https://stackoverflow.com/questions/27732354/unable-to-load-files-using-pickle-and-multiple-modules)! Okay.... looks like maybe we need to import our class and dump it from a helper.\n",
+    "Hmm, what do we make of that error? To [Stack Overflow](https://stackoverflow.com/questions/27732354/unable-to-load-files-using-pickle-and-multiple-modules)!\n",
+    "\n",
+    "> Remember that pickle doesn't actually store information about how a class/object is constructed, and needs access to the class when unpickling.\n",
+    "\n",
+    "Okay.... looks like maybe we need to import our class and dump it from a helper.\n",
     "\n",
     "A helper might look like this:\n",
     "\n",
@@ -118,7 +126,7 @@
     "    pickle.dump(sd, f)\n",
     "```\n",
     "\n",
-    "Does this new object perform better after being yeeted across the internet?"
+    "Does this new object perform better after being sent across the internet?"
    ]
   },
   {
@@ -149,7 +157,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Huh, still doesn't work. It looks like the `pickled` object still references the old namespace. That won't work for the CTF because we don't know what namespaces existed in the players context. We need something totally independent."
+    "Huh, still doesn't work. It looks like the `pickled` object still references the old namespace. Severak if the solutions presented in the Stack Overflow link discuss writing a customer unpickler. However, this technique still acts as a redirection for import paths. That won't work for the CTF because we don't know what namespaces existed in the players context. Furthermore, we might not even have access to their various imports. We need something totally independent."
    ]
   },
   {
@@ -158,7 +166,7 @@
    "source": [
     "## Joblib\n",
     "\n",
-    "[Joblib](https://joblib.readthedocs.io/en/latest/) is another great library for doing this. In fact, it's [recommended by Scikit-Learn](https://scikit-learn.org/stable/modules/model_persistence.html) because it is \"more efficient on objects that carry large numpy arrays internally as is often the case for fitted scikit-learn estimators\"."
+    "[Joblib](https://joblib.readthedocs.io/en/latest/) is another great library for binary serialization. In fact, it's [recommended by Scikit-Learn](https://scikit-learn.org/stable/modules/model_persistence.html) because it is \"more efficient on objects that carry large numpy arrays internally as is often the case for fitted scikit-learn estimators\"."
    ]
   },
   {
@@ -195,7 +203,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Unfortunately, [\"joblib.dump() and joblib.load() are based on the Python pickle serialization model\"](https://joblib.readthedocs.io/en/latest/persistence.html). There are no wins here."
+    "Unfortunately while it is more efficient, [\"joblib.dump() and joblib.load() are based on the Python pickle serialization model\"](https://joblib.readthedocs.io/en/latest/persistence.html). We won't find our solution here."
    ]
   },
   {
@@ -244,7 +252,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Win. We can import the `Star_Destroyer` object and it even has the state it had when it was exported (we'd fired the laser once)."
+    "That's what we wanted to see! We can import the `Star_Destroyer` object and it even has the state it had when it was exported (we'd fired the laser once)."
    ]
   },
   {
@@ -263,7 +271,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -277,7 +285,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
