--- a/content/objects_through_space.ipynb
+++ b/content/objects_through_space.ipynb
@@ -157,7 +157,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Huh, still doesn't work. It looks like the `pickled` object still references the old namespace. Severak if the solutions presented in the Stack Overflow link discuss writing a customer unpickler. However, this technique still acts as a redirection for import paths. That won't work for the CTF because we don't know what namespaces existed in the players context. Furthermore, we might not even have access to their various imports. We need something totally independent."
+    "Huh, still doesn't work. It looks like the `pickled` object still references the old namespace. Several of the solutions presented in the Stack Overflow link discuss writing a customer unpickler. However, this technique still acts as a redirection for import paths. That won't work for the CTF because we don't know what namespaces existed in the players context. Furthermore, we might not even have access to their various imports. We need something totally independent."
    ]
   },
   {
